<?xml version="1.0" encoding="utf-8"?><FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:id="@+id/main_layout"    android:layout_width="match_parent"    android:layout_height="match_parent">    <View        android:layout_width="match_parent"        android:layout_height="match_parent"        android:background="@drawable/header_background_gradient" />    <ImageView        android:layout_width="match_parent"        android:layout_height="match_parent"        android:alpha="0.40"        android:scaleType="centerCrop"        android:src="@drawable/background_ic" />    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_gravity="center_horizontal"        android:layout_marginTop="60dp"        android:text="@string/welcome"        android:textAppearance="@style/TextAppearance.AppCompat.Display1"        android:textColor="@color/colorAccent"        android:textStyle="bold" />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="match_parent"        android:gravity="center"        android:orientation="vertical"        android:weightSum="3">        <Button            android:id="@+id/about_john"            style="@style/ButtonTheme"            android:text="@string/meet_johnaldy1" />        <Button            android:id="@+id/about_alc"            style="@style/ButtonTheme"            android:layout_marginTop="8dp"            android:text="@string/about_alc" />    </LinearLayout></FrameLayout>