<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MeetJohnaldy">


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="267dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/header_background_gradient" />

            <ImageView
                android:id="@+id/detailImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="false"
                android:alpha="0.10"
                android:cropToPadding="false"
                android:scaleType="center"
                app:srcCompat="@drawable/background_ic" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:rotation="270"
                    android:src="@drawable/newpix" />

                <TextView
                    android:id="@+id/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                    android:textColor="#ffffff"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />
            </LinearLayout>

        </FrameLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="395dp"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/trackview"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:elevation="20dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/track"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/track"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <TextView
                    android:id="@+id/track_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/android_and_cloud"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/cardview_dark_background" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/country_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:elevation="20dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trackview">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/country_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/country"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <TextView
                    android:id="@+id/country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/country_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/cardview_dark_background" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/email_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:elevation="20dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/email_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <TextView
                    android:id="@+id/email_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/cardview_dark_background" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/phone_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:elevation="20dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <TextView
                    android:id="@+id/phone_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/_08081800155"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/cardview_dark_background" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/slack_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:elevation="20dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/slack_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/slack_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <TextView
                    android:id="@+id/slack_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/techaddict"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/cardview_dark_background" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <View
            android:id="@+id/divider2"
            android:layout_width="395dp"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slack_view" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slack_view">

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook"
                android:contentDescription="@string/facebook" />

            <ImageButton
                android:id="@+id/twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_twitter_letter_logo"
                android:contentDescription="@string/twitter" />

            <ImageButton
                android:id="@+id/linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_linkedin"
                android:contentDescription="@string/linkedin" />

            <ImageButton
                android:id="@+id/instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_instagram"
                android:contentDescription="@string/instagram" />

            <ImageButton
                android:id="@+id/github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_github_sign"
                android:contentDescription="@string/github" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>